Issue #3126275 by Indrajith KB, priyanka.sahni, BhumikaVarshney, mmd, volkerk, chr.fritsch: The action form elements of the 'edit node' have an incorrect position on mobile devices

--- a/sass/content-form-theme.scss
+++ b/sass/content-form-theme.scss
@@ -46,7 +46,6 @@
  *
  */
 .content-form__actions {
-  z-index: 101;
 
   .button--danger {
     display: inline-block;
